--- a/css/styles.css
+++ b/css/styles.css
@@ -192,4 +192,19 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--cloud);
+    position: relative;
+    width: auto;
+    height: auto;
+    left: auto;
+    top:auto;
+    box-sizing: var(--green);
+    display: flex;
+    align-items: baseline;
+    flex-direction: column;
+    gap: 0;
+    border-radius: 0%;
+    box-shadow: none;
+    order: unset;
+    flex-grow: unset;
+    border-bottom: 0ch;
 }
